Bug 51926 - FILEOPEN particular .xlsm: Formula with link to external contents missing if target sheet name contains space
Summary: FILEOPEN particular .xlsm: Formula with link to external contents missing if ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.7.0 target:3.6.2
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-09 19:59 UTC by Frank Tilley
Modified: 2012-08-28 08:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
illustration of vanishing cell content in MS-made xlsm files (9.93 KB, application/vnd.ms-excel.sheet.macroEnabled.12)
2012-07-09 19:59 UTC, Frank Tilley
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Tilley 2012-07-09 19:59:19 UTC
Created attachment 64048 [details]
illustration of vanishing cell content in MS-made xlsm files

I have a .xlsm file is created in Microsoft Excel 2010 that has links to another .xlsm data file with has spaces in the worksheet tab.  When I open the same file in calc, the cell which had the link to the data file's tab with spaces in it comes up empty (the previously saved value is present; the formula/input field is empty).  I've tried this with both Windows and Ubuntu versions of LibreOffice with the same result.
Other info
Windows 7, LibreOffice version 3.5.2.2
Ubuntu 12.04, LibreOfficeversion 3.5.4.2

I've attached a small test file illustrating the problem
Comment 1 Rainer Bielefeld Retired 2012-07-10 05:29:57 UTC
More or less [Reproducible] with reporter's sample and Server Installation of  "LibreOffice 3.6.0.0.beta3  German UI/Locale [Build-ID: 3e2b862] on German WIN7 Home Premium (64bit):

Cells A3:C3 and A7:C7 contain links to contents in an other document, in C7 (linking to contents in a sheet with name "sheet 4"(?)) only a "=" instead of a complete link is visible. I will have to check how it looks with Excel.

Same with LibO 3.3.3, AOOo 3.4 and OOo 3.2.1RC1, seems inherited from OOo
Comment 2 Rainer Bielefeld Retired 2012-07-27 04:11:07 UTC
NEW due to Comment 2.

[Reproducible] with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 66e4540]" (tinderbox:Win-x86@6, pull time 2012-07-26 02:09:47)

@Spreadsheet Team
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug (and remove others in team from CC)
Comment 3 Not Assigned 2012-08-27 20:09:00 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0bb0937b65200382d3d8ad8f36472067ff0cbb40

do not silently ignore a token API error, fdo#51926 related
Comment 4 Not Assigned 2012-08-27 22:18:28 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=85e40d787e9aacadfd8599791c83d09eb04e46d5

resolved fdo#51926 handle .xlsm link to external sheet with space
Comment 5 Not Assigned 2012-08-28 08:35:32 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a6ada4a4dab3edb0896ac5665623c0d4727baf7&g=libreoffice-3-6

resolved fdo#51926 handle .xlsm link to external sheet with space


It will be available in LibreOffice 3.6.2.