do not silently ignore a token API error, fdo#51926 related

Change-Id: Ie187dad84bd55bb76c795b5c4807566e80349b56